# coffeeshop-python-course

./: README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_orders.py
app/: main.py
app/api/: orders.py
app/core/: __init__.py  config.py
app/db/: deps.py  session.py
app/models/: __init__.py  order.py
app/repositories/: orders.py
app/schemas/: __init__.py  order.py
app/services/: errors.py  events.py  orders.py  queue.py
consumer/: __init__.py  main.py
docker/: Dockerfile.api  Dockerfile.consumer
docker/grafana/provisioning/dashboards/: fastapi-dashboard.json
tests/: conftest.py  test_api_metrics.py  test_consumer.py  test_consumer_retry.py  test_db_deps.py  test_events.py  test_orders_api.py  test_queue.py  test_repository.py  test_service.py  test_service_misc.py
