[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffeeshop-python-course"
version = "0.1.0"
description = "Coffee shop ordering service on Python"
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]

[tool.setuptools.packages.find]
include = ["app*", "consumer*"]
