[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffeeshop-python-course"
version = "0.1.0"
description = "Coffee shop ordering service on Python"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
include = ["app*", "consumer*"]
