[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffeeshop-python-course"
version = "0.1.0"
description = "Coffee shop ordering service on Python"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "pika>=1.3.2",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.1.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.4",
]

[tool.setuptools.packages.find]
include = ["app*", "consumer*"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov=consumer --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
